fix(ci): missing `runs-on`

--- a/.github/workflows/build_prod.yml
+++ b/.github/workflows/build_prod.yml
@@ -11,6 +11,7 @@ permissions:
 jobs:
   publish:
     name: Build and upload APK
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
