--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
         <meta-data
             android:name="io.sentry.traces.profiling.sample-rate"
             android:value="0.6" />
+
+        <meta-data android:name="io.sentry.environment" android:value="${sentryEnvironment}" />
     </application>
 
 </manifest>
