fix(ci): add sentry token

--- a/.github/workflows/build_prod.yml
+++ b/.github/workflows/build_prod.yml
@@ -46,6 +46,8 @@ jobs:
 
       - name: Build AAB and APK with Gradle
         run: ./gradlew --refresh-dependencies assembleRelease
+        env:
+            SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
       - name: Upload APK artifact to workflow
         uses: actions/upload-artifact@v3
