feat(ci): attempt unit tests

--- a/.github/workflows/build_prod.yml
+++ b/.github/workflows/build_prod.yml
@@ -44,10 +44,15 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Run unit tests
+        run: ./gradlew --refresh-dependencies test
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+
       - name: Build AAB and APK with Gradle
         run: ./gradlew --refresh-dependencies assembleRelease
         env:
-            SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
       - name: Upload APK artifact to workflow
         uses: actions/upload-artifact@v3
