--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,9 @@
             android:name="io.sentry.traces.profiling.sample-rate"
             android:value="0.6" />
 
-        <meta-data android:name="io.sentry.environment" android:value="${sentryEnvironment}" />
+        <meta-data
+            android:name="io.sentry.environment"
+            android:value="${sentryEnvironment}" />
     </application>
 
 </manifest>
